[package]
name = "rsraft"
version = "0.1.0"
authors = ["Lauro Caetano <laurocaetano1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
libmath = "0.2.1"
rand = "0.8.2"
