[package]
name = "rsraft"
version = "0.1.0"
authors = ["Lauro Caetano <laurocaetano1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
libmath = "0.2.1"
bincode =  "1.3.1"
rand = "0.8.2"
log = "0.4"
simplelog = "^0.7.6"
